# beamtimehero_cli

./: .gitignore  README.md  pyproject.toml
src/beamtimehero_cli/: __init__.py  audited_call.py  config.py  runtime_state.py  spec_eval.py
src/beamtimehero_cli/action_log/: __init__.py  cli_log.py  db.py  models.py  session.py
src/beamtimehero_cli/analysis/: __init__.py  render.py  xas.py
src/beamtimehero_cli/cli/: __main__.py
src/beamtimehero_cli/cli/profiles/: __init__.py  bl_aligner.py  k8s_agent.py
src/beamtimehero_cli/experiment_planning/: decisions.py  scan_efficiency.py  scan_features.py  scan_strategies.py
src/beamtimehero_cli/generic_data/: cosine_similarity.py  fitter.py
src/beamtimehero_cli/interpretation/: __init__.py  calibration_store.py  calibrations.py  descriptors.py  edges.py  interpret.py  normalize.py  plotting.py  quality.py
src/beamtimehero_cli/llm/: __init__.py  key_pool.py
src/beamtimehero_cli/notify/: __init__.py  slack.py
src/beamtimehero_cli/refdocs/: __init__.py
src/beamtimehero_cli/refdocs/defaults/: action-log.md  getting-started.md  profiles.md
src/beamtimehero_cli/reference_images/: manifest.json
src/beamtimehero_cli/spec_control/: __init__.py  phase_allowlist.py  phases.py  sandbox_client.py  screen_client.py  spec_cmd.py  tcp_client.py  transport.py
src/beamtimehero_cli/spec_data/: backend.py  files_backend.py  local_data.py  plotting.py  postgres_backend.py  scans.py  spec_config.py  spec_reader.py
src/beamtimehero_cli/spec_logs/: error_checker.py  log_parser.py  log_reader.py
src/beamtimehero_cli/tool_catalog/: __init__.py  categorize.py  cli.py  cli_tool.py  definitions.py  executor.py  lineage.py  tools_core.py
tests/: test_action_log.py  test_analysis_xas.py  test_cli_help.py  test_error_checker_failover.py  test_files_backend.py  test_interpretation.py  test_llm_render.py  test_local_data_cache.py  test_postgres_backend.py  test_profiles.py  test_smoke.py
