[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "beamtimehero_cli"
version = "0.3.0"
description = "Generic CLI for SSRL BL15-2 beamline: SPEC injection, scan data reads, log reads, action logging."
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "silx",
    "numpy",
    "pandas",
    "scipy",
    "lmfit",
    "xraydb",
    "sqlmodel",
    "pyyaml",
    "matplotlib",
    "python-dotenv",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
# Slack messaging tools. Pulled lazily inside notify/slack.py so the bare
# install can run without slack-sdk if no deployment needs Slack.
slack = [
    "slack-sdk",
]
# Postgres-backed scan data (used by deployments where bldata_converter
# populates BL15-2_scan_metadata, like the playground k8s pod). Lazy
# import inside spec_data/postgres_backend.py.
postgres = [
    "psycopg2-binary",
]

[project.scripts]
beamtimehero = "beamtimehero_cli.cli.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
beamtimehero_cli = ["refdocs/defaults/*.md"]
